manifests/service.yaml
# Указывание версии API и типа ресурса (Service настраивает сеть и балансирует трафик между подами)
apiVersion: v1
kind: Service

# Задание уникального имя сервиса и кластерной папки (namespace), где он находится
metadata:
  name: todo-service
  namespace: todo-app

# Спецификация: настройки сетевых портов и правил доступа
spec:

  # Селектор: указывает сервису перенаправлять трафик только на поды с меткой app: todo-app
  selector:
    app: todo-app

  # Настройка портов  
  ports: 
  - port: 80         # Внешний порт: на этом порту сервис принимает запросы внутри кластера
    targetPort: 5000 # Внутренний порт: порт самого Node.js-приложения внутри контейнера

  # Тип сервиса: ClusterIP делает приложение доступным только внутри самого кластера Kubernetes  
  type: ClusterIP
