manifests/ingress.yaml
# Указывание версии API сетевого интерфейса и типа ресурса (Ingress управляет внешним доступом к сервисам)
apiVersion: networking.k8s.io/v1
kind: Ingress
# Метаданные: уникальное имя ингресса и пространство имен
metadata:
  name: todo-ingress
  namespace: todo-app
# Спецификация: описание правил маршрутизации трафика от пользователя к приложению
spec:
  # ingressClassName указывает, какой именно Ingress-контроллер в кластере должен обрабатывать этот манифест
  ingressClassName: nginx
  # Список правил маршрутизации на основе доменных имен и URL-путей
  rules:
  # Доменное имя (хост), по которому приложение будет открываться в браузере (требует настройки файла /etc/hosts локально)
  - host: todo.example.com
    # Описание HTTP-маршрутов для указанного домена
    http:
        # Список путей (URL-адресов), которые нужно обрабатывать
      paths:
      # Базовый путь: обрабатывать все запросы, которые начинаются с главного адреса приложения
      - path: /
        # Стратегия соответствия пути: Prefix означает, что под это правило попадает как корень (/), так и любые вложенные адреса (например, /api/todos)
        pathType: Prefix
        # Бэкенд: указывает, куда именно Nginx должен перенаправить совпавший запрос внутри кластера
        backend:
          # Целевой Kubernetes-сервис, который распределяет трафик между запущенными подами Node.js
          service:
            name: todo-service
            # Сетевой порт этого сервиса, на который отправляется трафик (ClusterIP порт вашего todo-service)
            port:
              number: 80
